--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
 *.css linguist-detectable=false
+*.ps1 linguist-detectable=false
+*.sh linguist-detectable=false
